--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -49,6 +49,10 @@ html {
   }
 }
 
+body{
+  max-width: 100vw;
+}
+
 // Typography
 $font-family-primary: 'Outfit', sans-serif;
 $font-family-secondary: 'Arial', sans-serif;
@@ -209,11 +213,11 @@ body{
   height: 80px;
   display: flex;
 
-  @media screen and (max-width: $breakpoint-sm) {
-    height: auto;
-    padding: 10px 0;
-    flex-direction: column;
-  }
+  // @media screen and (max-width: $breakpoint-sm) {
+  //   height: auto;
+  //   padding: 10px 0;
+  //   flex-direction: column;
+  // }
 }
 
 
